--- a/both/layouts/footer.css
+++ b/both/layouts/footer.css
@@ -4,8 +4,8 @@ footer#footer {
   left: 0;
   width: 100%;
   height: 80px;
-  line-height: 80px;
   background-color: #f3f3f3;
+  display: table;
 }
 
 footer#footer p {
@@ -14,4 +14,6 @@ footer#footer p {
   font-size: 13px;
   color: #333;
   margin: 0;
+  vertical-align: middle;
+  display: table-cell;
 }
