--- a/both/layouts/header.css
+++ b/both/layouts/header.css
@@ -1,10 +1,14 @@
 @import "normalize";
 
 header#header {
+  width: 100%;
   height: 50px;
   background-color: purple;
   padding: 0;
-  position: relative;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
 }
 
 header#header button#openMenu {
